# web-app-template

./: .gitignore  README.md  pyproject.toml
app/backend/: main.py  schemas.py
app/database/: models.py  session.py
app/frontend/templates/: base.html  index.html
